# vorothree

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  README_WASM.md  REFERENCES.md  crates.js  help.html  index.html  patch_npm_pkg.js  rust-toolchain.toml  settings.html  src-files.js
.github/workflows/: deploy.yml  docs.yml  test.yml
benches/: README.md  capacity.rs  cell.rs  compare.rs  distributions.rs  parallelism.rs  scaling.rs  tessellation.rs  wall.rs
examples/: 2d_svg.rs  README.md  perf_check.rs  tessellation_svg.rs  walls_experiment.rs
examples/walls/: gltf.rs  main.rs  svg.rs
reference/: .gitignore  Makefile  README.md  references.bib  vorothree.tex
search.index/: 0041a0b087be.js  0044cd546855.js  0081e193e8d2.js  016524821c79.js  01a9afe7670c.js  01ae2985b1d9.js  01c06b63410d.js  024032560bf9.js  0270ae1b84cf.js  0283d130ab60.js  02c79ac3d6b6.js  02cc816ec89d.js  02e4d3bf02d9.js  02f6fe111cfe.js  0316b71ff298.js  032ad27c00d2.js  035cdd33be5a.js  0370e03b22eb.js  03878eaf9a11.js  03c1c0cbbe00.js  0424b2e5ff3d.js  04764117df2e.js  047f85f9ea40.js  04b87fa651c4.js  04c5d2b13899.js  055fc4091242.js  059beac9f876.js  05a6f6123d1a.js  05f6a58ea08e.js  060344626f1c.js  063393eafcc6.js  069a0c68cf3c.js  06a922aaad77.js  073394fd233a.js  073ddb7cf8d1.js  073fb541d54e.js  07af622ec77e.js  07be9f3aa736.js  07d261ec77c7.js  07f663917b60.js  (+603 more)
search.index/crateNames/: 311fd4b3bde8.js  8df38fed7f70.js
search.index/desc/: 1662002ddf77.js  24aaf7e1f1d9.js  37e4d8f8af3e.js  3f494326389a.js  4b4486090bd0.js  5d23fe9d84eb.js  613a366aa2d7.js  77eab013cf81.js  9285e17954b9.js  bdaa8669364f.js  d0c485a9cc67.js  ddd457b1d03c.js  f42e77a0f80c.js
search.index/entry/: 254a7d6c3f0c.js  29386395b724.js  4be73f698210.js  5113af2276fe.js  5283575a9079.js  80b72c16e22f.js  94ca304c0dc8.js  a218cb933ccb.js  a7eb502898ba.js  bcf3fd03eabc.js  d58b5c4519cc.js  de934c045796.js  f1751ae7a611.js
search.index/function/: 188b190a9afe.js  335768e876a0.js  3cf42a47c283.js  57e60a4e2260.js  585c8a741a29.js  77bff1b4a525.js  997c6f181199.js  9bfe7c112805.js  a7c7f8759700.js  b0b06e907b6b.js  d4f5efffa7b5.js  e3961f71e7e4.js  (+1 more)
src/: algo_grid.rs  algo_octree.rs  bounds.rs  cell.rs  cell_edges.rs  cell_faces.rs  geometries.rs  kdtree.rs  lib.rs  moctree.rs  tessellation.rs  tessellation_edges.rs  tessellation_grid.rs  tessellation_kdtree.rs  tessellation_moctree.rs  tessellation_wasm.rs  wall.rs  wasm.rs
tests/: README.md  comparisons.rs  integration.rs  integration_4d.rs  mapping.rs  neighbors.rs  volumes.rs
voronoid/: all.html  constant.WALL_ID_MAX.html  fn.box_side.html  index.html  sidebar-items.js  struct.Algorithm2DGrid.html  struct.Algorithm3DGrid.html  struct.Algorithm3DOctree.html  struct.BoundingBox.html  struct.Cell2D.html  struct.Cell3DFaces.html  struct.Tessellation.html  struct.Wall.html  trait.Cell.html  trait.SpatialAlgorithm.html  trait.WallGeometry.html
vorothree/: all.html  constant.BOX_ID_BACK.html  constant.BOX_ID_BOTTOM.html  constant.BOX_ID_FRONT.html  constant.BOX_ID_LEFT.html  constant.BOX_ID_RIGHT.html  constant.BOX_ID_TOP.html  constant.WALL_ID_MAX.html  constant.WALL_ID_START.html  fn.box_side.html  index.html  sidebar-items.js  struct.Algorithm2DGrid.html  struct.Algorithm3DGrid.html  struct.Algorithm3DOctree.html  struct.AlgorithmGrid.html  struct.AlgorithmGrid2D.html  struct.AlgorithmOctree.html  struct.BoundingBox.html  struct.Cell2D.html  struct.Cell3DFaces.html  struct.CellEdges.html  struct.CellFaces.html  struct.Tessellation.html  struct.TessellationEdges.html  struct.TessellationGrid.html  struct.TessellationMoctree.html  struct.Wall.html  trait.Cell.html  trait.SpatialAlgorithm.html  trait.WallGeometry.html
www/: README.md  index.html  landing.html  main.ts  package-lock.json  package.json  typedoc.json  vite.config.ts
(+511 files in other folders)
