[package]
name = "vorothree"
version = "0.1.0"
authors = ["Maikel de Vries <info@mdt.re>"]
description = "3D Voronoi tessellation in Rust: a fast, feature-rich grid-based approach ready for WASM and TypeScript."
license = "MIT/Apache-2.0"
repository = "https://github.com/mdt-re/voro-js"
edition = "2024"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
rayon = "1.10"
wasm-bindgen-rayon = "1.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Configuration for docs.rs
[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
all-features = true

[dev-dependencies]
criterion = "0.5"
plotters = "0.3"
rand = "0.8"
gltf = "1.4"

[[bench]]
name = "cell"
harness = false
path = "benches/cell.rs"

[[bench]]
name = "compare"
harness = false
path = "benches/compare.rs"

[[bench]]
name = "distributions"
harness = false
path = "benches/distributions.rs"

[[bench]]
name = "scaling"
harness = false
path = "benches/scaling.rs"

[[bench]]
name = "tessellation"
harness = false
path = "benches/tessellation.rs"

[[bench]]
name = "wall"
harness = false
path = "benches/wall.rs"

[profile.release]
debug = true
